--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <section class="main__restaurants">
             <h2 class="main__restaurants__title title">Restaurants</h2>
             <div class="main__restaurants__list">
-                <article class="main__restaurants__list__article">
+                <a href="./restaurant/menus/palette-du-gout.html" class="main__restaurants__list__article">
                     <div class="main__restaurants__list__article__header">
                         <div class="main__restaurants__list__article__header__tag">
                             <p>Nouveau</p>
@@ -100,8 +100,8 @@
 
 
                     </div>
-                </article>
-                <article class="main__restaurants__list__article">
+                </a>
+                <a href="./restaurant/menus/note-enchante.html" class="main__restaurants__list__article">
                     <div class="main__restaurants__list__article__header">
                         <div class="main__restaurants__list__article__header__tag">
                             <p>Nouveau</p>
@@ -121,8 +121,8 @@
 
 
                     </div>
-                </article>
-                <article class="main__restaurants__list__article">
+                </a>
+                <a href="./restaurant/menus/a-la-francaise.html" class="main__restaurants__list__article">
                     <div class="main__restaurants__list__article__header">
 
                         <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image plat"
@@ -139,8 +139,8 @@
 
 
                     </div>
-                </article>
-                <article class="main__restaurants__list__article">
+                </a>
+                <a href="./restaurant/menus/delice-des-sens.html" le class="main__restaurants__list__article">
                     <div class="main__restaurants__list__article__header">
 
                         <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
@@ -157,7 +157,7 @@
 
 
                     </div>
-                </article>
+                </a>
             </div>
         </section>
     </main>
@@ -165,8 +165,10 @@
     <footer>
         <img src="assets/images/logo/ohmyfood@2x.svg" alt="logo du footer" class="footer__logo">
         <ul class="footer__navigation">
-            <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-utensils"></i> Proposer un restaurant</a></li>
-            <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-handshake-angle"></i> Devenir partenaire</a></li>
+            <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-utensils"></i> Proposer un
+                    restaurant</a></li>
+            <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-handshake-angle"></i> Devenir
+                    partenaire</a></li>
             <li><a class="footer__navigation__link" href="#">Mentions légales</a></li>
             <li><a class="footer__navigation__link" href="#">Contact</a></li>
 
