--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
                             <h3 class="main__restaurants__list__article__text__title">La palette du goût</h3>
                             <p class="main__restaurants__list__article__text__corps">Ménilmontant</p>
                         </div>
-
-                        <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon"></i>
+                        <div class="main__restaurants__list__article__footer__icon">
+                            <i class="fa-solid fa-heart main__restaurants__list__article__footer__icon--solid"></i>
+                            <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon--border"></i>
+                        </div>
 
 
                     </div>
@@ -113,9 +115,10 @@
                             <p class="main__restaurants__list__article__text__corps">Charonne</p>
                         </div>
 
-                        <i
-                            class="fa-solid fa-heart main__restaurants__list__article__footer__icon main__restaurants__list__article__footer__icon--primaire"></i>
-
+                        <div class="main__restaurants__list__article__footer__icon">
+                            <i class="fa-solid fa-heart main__restaurants__list__article__footer__icon--solid"></i>
+                            <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon--border"></i>
+                        </div>
 
                     </div>
                 </a>
@@ -132,8 +135,10 @@
                             <p class="main__restaurants__list__article__text__corps">Cité Rouge</p>
                         </div>
 
-                        <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon"></i>
-
+                        <div class="main__restaurants__list__article__footer__icon">
+                            <i class="fa-solid fa-heart main__restaurants__list__article__footer__icon--solid"></i>
+                            <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon--border"></i>
+                        </div>
 
                     </div>
                 </a>
@@ -150,8 +155,10 @@
                             <p class="main__restaurants__list__article__text__corps">Folie-Méricourt</p>
                         </div>
 
-                        <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon"></i>
-
+                        <div class="main__restaurants__list__article__footer__icon">
+                            <i class="fa-solid fa-heart main__restaurants__list__article__footer__icon--solid"></i>
+                            <i class="fa-regular fa-heart main__restaurants__list__article__footer__icon--border"></i>
+                        </div>
 
                     </div>
                 </a>
