--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+    <div class="loader">
+        <img src="assets/images/loader.gif" alt="">
+    </div>
     <header class="header">
         <img class="header__logo" src="assets/images/logo/ohmyfood.png" alt="logo du site ohmyfood">
         <div class="header__localisation">
