effet graphique et animation

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
 
     <link rel="stylesheet" href="assets/style.css">
-
 </head>
 
 <body>
     <div class="loader">
-        <img src="assets/images/loader.gif" alt="">
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
     </div>
     <header class="header">
         <img class="header__logo" src="assets/images/logo/ohmyfood.png" alt="logo du site ohmyfood">
