--- a/restaurant/menus/delice-des-sens.html
+++ b/restaurant/menus/delice-des-sens.html
@@ -48,35 +48,63 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Tartare de thon
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Assaisonné au yuzu </p>
-                        <p class="main__menu__commande__article__detail__prix">25€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Tartare de thon
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Assaisonné au yuzu </p>
+                            <p class="main__menu__commande__article__detail__prix">25€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Bouchée de homard croustillant
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et sa farandole de petits légumes
-                        </p>
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Bouchée de homard croustillant
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et sa farandole de petits
+                                légumes
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Poulet rôti aux herbes de Provence
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et sa crème de truffe
-                        </p>
-                        <p class="main__menu__commande__article__detail__prix">40€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Poulet rôti aux herbes de Provence
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et sa crème de truffe
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">40€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -91,31 +119,58 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Poulet rôti aux herbes de Provence
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et sa crème de truffe </p>
-                        <p class="main__menu__commande__article__detail__prix">40€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Poulet rôti aux herbes de Provence
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et sa crème de truffe </p>
+                            <p class="main__menu__commande__article__detail__prix">40€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Langouste rôtie
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et ses légumes de saison </p>
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Langouste rôtie
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et ses légumes de saison </p>
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Côte de bœuf Angus
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et sa purée de panais </p>
-                        <p class="main__menu__commande__article__detail__prix">44€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Côte de bœuf Angus
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et sa purée de panais </p>
+                            <p class="main__menu__commande__article__detail__prix">44€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -129,31 +184,58 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Farandole de desserts
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Du chef</p>
-                        <p class="main__menu__commande__article__detail__prix">18€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Farandole de desserts
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Du chef</p>
+                            <p class="main__menu__commande__article__detail__prix">18€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Crème brulée
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Revisitée </p>
-                        <p class="main__menu__commande__article__detail__prix">22€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Crème brulée
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Revisitée </p>
+                            <p class="main__menu__commande__article__detail__prix">22€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Tiramisu
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> À la noisette</p>
-                        <p class="main__menu__commande__article__detail__prix">23€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Tiramisu
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> À la noisette</p>
+                            <p class="main__menu__commande__article__detail__prix">23€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
