--- a/restaurant/menus/palette-du-gout.html
+++ b/restaurant/menus/palette-du-gout.html
@@ -48,34 +48,63 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Fricassée d'escargots
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Au piment d'Espelette </p>
-                        <p class="main__menu__commande__article__detail__prix">25€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Fricassée d'escargots
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Au piment d'Espelette </p>
+                            <p class="main__menu__commande__article__detail__prix">25€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Foie gras de canard mi-cuit
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et ses copeaux de truffe noire
-                        </p>
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Foie gras de canard mi-cuit
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et ses copeaux de truffe
+                                noire
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Œuf au plat </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Assaisonné à la truffe sur lit de
-                            caviar </p>
-                        <p class="main__menu__commande__article__detail__prix">20€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Œuf au plat </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Assaisonné à la truffe sur
+                                lit de
+                                caviar </p>
+                            <p class="main__menu__commande__article__detail__prix">20€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -90,33 +119,62 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Filet de bœuf aux herbes
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Accompagné de sa ribambelle de
-                            légumes </p>
-                        <p class="main__menu__commande__article__detail__prix">40€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Filet de bœuf aux herbes
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Accompagné de sa ribambelle
+                                de
+                                légumes </p>
+                            <p class="main__menu__commande__article__detail__prix">40€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Parmentier de queue de bœuf
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> À la truffe noire sur sa purée de
-                            panais </p>
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Parmentier de queue de bœuf
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> À la truffe noire sur sa
+                                purée de
+                                panais </p>
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Filet de turbot
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Aux agrumes </p>
-                        <p class="main__menu__commande__article__detail__prix">44€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Filet de turbot
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Aux agrumes </p>
+                            <p class="main__menu__commande__article__detail__prix">44€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -130,33 +188,60 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Paris-Brest
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Revisité </p>
-                        <p class="main__menu__commande__article__detail__prix">18€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Paris-Brest
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Revisité </p>
+                            <p class="main__menu__commande__article__detail__prix">18€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Macaron au chocolat d'exception
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et glace à la vanille de
-                            Madagascar </p>
-                        <p class="main__menu__commande__article__detail__prix">22€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Macaron au chocolat d'exception
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et glace à la vanille de
+                                Madagascar </p>
+                            <p class="main__menu__commande__article__detail__prix">22€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Mousse au chocolat
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Au piment d'Espelette et à la
-                            truffe noire </p>
-                        <p class="main__menu__commande__article__detail__prix">23€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Mousse au chocolat
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Au piment d'Espelette et à la
+                                truffe noire </p>
+                            <p class="main__menu__commande__article__detail__prix">23€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
