--- a/restaurant/menus/a-la-francaise.html
+++ b/restaurant/menus/a-la-francaise.html
@@ -49,17 +49,26 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Tartare de poulpe acidulé
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Aux zestes d'orange </p>
-                        <p class="main__menu__commande__article__detail__prix">25€</p>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Tartare de poulpe acidulé
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Aux zestes d'orange </p>
+                            <p class="main__menu__commande__article__detail__prix">25€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>                    </div>
+
+
+                   
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
                         Velouté de légumes d'antan
                     </h3>
                     <div class="main__menu__commande__article__detail">
@@ -70,7 +79,8 @@
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
                         Soupe à l'oignon
                     </h3>
                     <div class="main__menu__commande__article__detail">
@@ -92,7 +102,8 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
                         Coquilles Saint-Jacques
                     </h3>
                     <div class="main__menu__commande__article__detail">
@@ -102,7 +113,8 @@
                     </div>
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
                         Magret de canard
                     </h3>
                     <div class="main__menu__commande__article__detail">
@@ -112,7 +124,8 @@
                     </div>
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
                         Pigeonneau d’Ille-et-Vilaine
                     </h3>
                     <div class="main__menu__commande__article__detail">
@@ -133,7 +146,8 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
                         Pétales de violettes glacés
                     </h3>
                     <div class="main__menu__commande__article__detail">
@@ -142,7 +156,8 @@
                     </div>
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
                         Fondant au chocolat
                     </h3>
                     <div class="main__menu__commande__article__detail">
@@ -151,7 +166,8 @@
                     </div>
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
                         Millefeuille croustillant
                     </h3>
                     <div class="main__menu__commande__article__detail">
