--- a/restaurant/menus/note-enchante.html
+++ b/restaurant/menus/note-enchante.html
@@ -48,43 +48,50 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Ravioles de foie gras
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description">Accompagnées de leur crème à la
-                            truffe </p>
-                        <p class="main__menu__commande__article__detail__prix">25€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Ravioles de foie gras
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description">Accompagnées de leur crème à
+                                la
+                                truffe </p>
+                            <p class="main__menu__commande__article__detail__prix">25€</p>
+                        </div>
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Caviar osciètre
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Sur blini à la farine de blé noir
-                        </p>
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Caviar osciètre
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Sur blini à la farine de blé
+                                noir
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Homard et espuma de potiron </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description">Marinés aux zestes d'orange
-                        <p class="main__menu__commande__article__detail__prix">20€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Homard et espuma de potiron </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description">Marinés aux zestes d'orange
+                            <p class="main__menu__commande__article__detail__prix">20€</p>
+                        </div>
                 </article>
 
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Foie gras de canard cuit entier </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description">Confiture de figue et pain toasté
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Foie gras de canard cuit entier </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description">Confiture de figue et pain
+                                toasté
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                 </article>
 
             </section>
@@ -99,33 +106,37 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Noix de coquilles Saint-Jacques
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Sur lit de purée de céleri-rave
-                        </p>
-                        <p class="main__menu__commande__article__detail__prix">40€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Noix de coquilles Saint-Jacques
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Sur lit de purée de
+                                céleri-rave
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">40€</p>
+                        </div>
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Langoustine poêlée
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description">Purée de patate douce </p>
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Langoustine poêlée
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description">Purée de patate douce </p>
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Mijoté de queue de bœuf
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et riz sauvage aux zestes de
-                            citron </p>
-                        <p class="main__menu__commande__article__detail__prix">45€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Mijoté de queue de bœuf
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et riz sauvage aux zestes de
+                                citron </p>
+                            <p class="main__menu__commande__article__detail__prix">45€</p>
+                        </div>
                 </article>
 
             </section>
@@ -139,32 +150,37 @@
 
                 </div>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Macaron noisette et chocolat
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Glace au caramel brun et sel de
-                            Guérande </p>
-                        <p class="main__menu__commande__article__detail__prix">18€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Macaron noisette et chocolat
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Glace au caramel brun et sel
+                                de
+                                Guérande </p>
+                            <p class="main__menu__commande__article__detail__prix">18€</p>
+                        </div>
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Baba au rhum revisité
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Avec son coulis de citron </p>
-                        <p class="main__menu__commande__article__detail__prix">22€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Baba au rhum revisité
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Avec son coulis de citron
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">22€</p>
+                        </div>
                 </article>
                 <article class="main__menu__commande__article">
-                    <h3 class="main__menu__commande__article__title">
-                        Tarte au citron meringuée
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Déstructurée </p>
-                        <p class="main__menu__commande__article__detail__prix">23€</p>
-                    </div>
+                    <div class="main__menu__commande__article__main">
+                        <h3 class="main__menu__commande__article__title">
+                            Tarte au citron meringuée
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Déstructurée </p>
+                            <p class="main__menu__commande__article__detail__prix">23€</p>
+                        </div>
                 </article>
 
             </section>
