Validation du code html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
                     </div>
                 </a>
-                <a href="./restaurant/menus/delice-des-sens.html" le class="main__restaurants__list__article">
+                <a href="./restaurant/menus/delice-des-sens.html" class="main__restaurants__list__article">
                     <div class="main__restaurants__list__article__header">
 
                         <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
