--- a/restaurant/menus/note-enchante.html
+++ b/restaurant/menus/note-enchante.html
@@ -58,6 +58,14 @@
                                 truffe </p>
                             <p class="main__menu__commande__article__detail__prix">25€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
                 <article class="main__menu__commande__article">
@@ -71,6 +79,14 @@
                             </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
                 <article class="main__menu__commande__article">
@@ -81,6 +97,14 @@
                             <p class="main__menu__commande__article__detail__description">Marinés aux zestes d'orange
                             <p class="main__menu__commande__article__detail__prix">20€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
                 <article class="main__menu__commande__article">
@@ -92,6 +116,14 @@
                                 toasté
                             <p class="main__menu__commande__article__detail__prix">35€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -116,6 +148,14 @@
                             </p>
                             <p class="main__menu__commande__article__detail__prix">40€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
@@ -126,6 +166,14 @@
                             <p class="main__menu__commande__article__detail__description">Purée de patate douce </p>
                             <p class="main__menu__commande__article__detail__prix">35€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
@@ -137,6 +185,14 @@
                                 citron </p>
                             <p class="main__menu__commande__article__detail__prix">45€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -160,6 +216,14 @@
                                 Guérande </p>
                             <p class="main__menu__commande__article__detail__prix">18€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
@@ -171,6 +235,14 @@
                             </p>
                             <p class="main__menu__commande__article__detail__prix">22€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
@@ -181,6 +253,14 @@
                             <p class="main__menu__commande__article__detail__description"> Déstructurée </p>
                             <p class="main__menu__commande__article__detail__prix">23€</p>
                         </div>
+                    </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -191,21 +271,21 @@
 
     </main>
 
+
+    <footer>
+
+        <img src="../../assets/images/logo/ohmyfood@2x.svg" alt="logo du footer" class="footer__logo">
+        <ul class="footer__navigation">
+            <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-utensils"></i> Proposer un
+                    restaurant</a></li>
+            <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-handshake-angle"></i> Devenir
+                    partenaire</a></li>
+            <li><a class="footer__navigation__link" href="#">Mentions légales</a></li>
+            <li><a class="footer__navigation__link" href="#">Contact</a></li>
+
+        </ul>
+    </footer>
+
 </body>
-
-<footer>
-
-    <img src="../../assets/images/logo/ohmyfood@2x.svg" alt="logo du footer" class="footer__logo">
-    <ul class="footer__navigation">
-        <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-utensils"></i> Proposer un
-                restaurant</a></li>
-        <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-handshake-angle"></i> Devenir
-                partenaire</a></li>
-        <li><a class="footer__navigation__link" href="#">Mentions légales</a></li>
-        <li><a class="footer__navigation__link" href="#">Contact</a></li>
-
-    </ul>
-</footer>
-
 
 </html>
