--- a/restaurant/menus/a-la-francaise.html
+++ b/restaurant/menus/a-la-francaise.html
@@ -60,34 +60,51 @@
                     </div>
 
                     <div class="main__menu__commande__article__aside">
-                        <i class="fa-solid fa-circle-check"></i>                    </div>
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
 
 
-                   
+
                 </article>
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
                         <h3 class="main__menu__commande__article__title">
-                        Velouté de légumes d'antan
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Carotte, panais, topinambour
-                        </p>
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
+                            Velouté de légumes d'antan
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Carotte, panais, topinambour
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
                         <h3 class="main__menu__commande__article__title">
-                        Soupe à l'oignon
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Revisitée
-                        </p>
-                        <p class="main__menu__commande__article__detail__prix">20€</p>
+                            Soupe à l'oignon
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Revisitée
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">20€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -104,35 +121,60 @@
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
                         <h3 class="main__menu__commande__article__title">
-                        Coquilles Saint-Jacques
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Accompagnées d'une purée de
-                            panais </p>
-                        <p class="main__menu__commande__article__detail__prix">40€</p>
+                            Coquilles Saint-Jacques
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Accompagnées d'une purée de
+                                panais </p>
+                            <p class="main__menu__commande__article__detail__prix">40€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
                         <h3 class="main__menu__commande__article__title">
-                        Magret de canard
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et parmentier de pommes de terre
-                        </p>
-                        <p class="main__menu__commande__article__detail__prix">35€</p>
+                            Magret de canard
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et parmentier de pommes de
+                                terre
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">35€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
                         <h3 class="main__menu__commande__article__title">
-                        Pigeonneau d’Ille-et-Vilaine
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Sur son lit de gnocchis aux
-                            légumes </p>
-                        <p class="main__menu__commande__article__detail__prix">44€</p>
+                            Pigeonneau d’Ille-et-Vilaine
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Sur son lit de gnocchis aux
+                                légumes </p>
+                            <p class="main__menu__commande__article__detail__prix">44€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -148,32 +190,57 @@
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
                         <h3 class="main__menu__commande__article__title">
-                        Pétales de violettes glacés
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Et purée de noisettes </p>
-                        <p class="main__menu__commande__article__detail__prix">18€</p>
+                            Pétales de violettes glacés
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Et purée de noisettes </p>
+                            <p class="main__menu__commande__article__detail__prix">18€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
                         <h3 class="main__menu__commande__article__title">
-                        Fondant au chocolat
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Revisité </p>
-                        <p class="main__menu__commande__article__detail__prix">22€</p>
+                            Fondant au chocolat
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Revisité </p>
+                            <p class="main__menu__commande__article__detail__prix">22€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
                 <article class="main__menu__commande__article">
                     <div class="main__menu__commande__article__main">
                         <h3 class="main__menu__commande__article__title">
-                        Millefeuille croustillant
-                    </h3>
-                    <div class="main__menu__commande__article__detail">
-                        <p class="main__menu__commande__article__detail__description"> Myrtilles et pâte d’amande</p>
-                        <p class="main__menu__commande__article__detail__prix">23€</p>
+                            Millefeuille croustillant
+                        </h3>
+                        <div class="main__menu__commande__article__detail">
+                            <p class="main__menu__commande__article__detail__description"> Myrtilles et pâte d’amande
+                            </p>
+                            <p class="main__menu__commande__article__detail__prix">23€</p>
+                        </div>
                     </div>
+
+                    <div class="main__menu__commande__article__aside">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+
+
+
                 </article>
 
             </section>
@@ -184,21 +251,21 @@
 
     </main>
 
+
+    <footer>
+
+        <img src="../../assets/images/logo/ohmyfood@2x.svg" alt="logo du footer" class="footer__logo">
+        <ul class="footer__navigation">
+            <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-utensils"></i> Proposer un
+                    restaurant</a></li>
+            <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-handshake-angle"></i> Devenir
+                    partenaire</a></li>
+            <li><a class="footer__navigation__link" href="#">Mentions légales</a></li>
+            <li><a class="footer__navigation__link" href="#">Contact</a></li>
+
+        </ul>
+    </footer>
+
 </body>
-
-<footer>
-
-    <img src="../../assets/images/logo/ohmyfood@2x.svg" alt="logo du footer" class="footer__logo">
-    <ul class="footer__navigation">
-        <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-utensils"></i> Proposer un
-                restaurant</a></li>
-        <li><a class="footer__navigation__link" href="#"> <i class="fa-solid fa-handshake-angle"></i> Devenir
-                partenaire</a></li>
-        <li><a class="footer__navigation__link" href="#">Mentions légales</a></li>
-        <li><a class="footer__navigation__link" href="#">Contact</a></li>
-
-    </ul>
-</footer>
-
 
 </html>
